tests/ci/expected/0203-main-params1.error.c.expected
ci/0203-main-params1.error.c:1:11: error: undefined behaviour: invalid parameter type for 'main': first parameter must be of type 'int'
int main (short argc, char ** argv) { return 0; }
          ^~~~~ 
ยง5.1.2.2.1#1: 
1   The function called at program startup is named main. The implementation declares no
    prototype for this function. It shall be defined with a return type of int and with no
    parameters:
            int main(void) { /* ... */ }
    or with two parameters (referred to here as argc and argv, though any names may be
    used, as they are local to the function in which they are declared):
            int main(int argc, char *argv[]) { /* ... */ }
    or equivalent;10) or in some other implementation-defined manner.
